	manual}.  Compiled code (except DLLs) may be incompatible with
      previous toolchains (and compiled C++ code almost certainly will
      be).

      This is a \sQuote{multilib} toolchain: there is a single set of
      tools in the \file{bin} directory and which sub-architecture is
      selected by a flag: in most cases \option{-m32} \emph{vs}
      \option{-m64}.

      \item There is a new macro (aka make variable)
      \samp{SHLIB_PTHREAD_FLAGS}.  This is set to
      \option{-pthread} on builds which support it, and should be
      included in both \samp{PKG_CPPFLAGS} (or the Fortran or F9x
      equivalents) and \samp{PKG_LIBS}.
    }
  }
}

\section{CHANGES IN R VERSION 2.14.1 patched}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item \code{bitmap()} and \code{dev2bitmap()} look for
      \command{gswin64c.exe} (as used by 64-bit GhostScript), in
      preference to \command{gswin32c.exe}.
    }
  }
  
  \subsection{BUG FIXES}{
    \itemize{
      \item Using a prompt of more than 80 characters in
      \code{readline()} could cause a buffer overflow in Rterm.
      (Reported by Henrik Bengtsson.)
    }
  }
}

\section{CHANGES IN R VERSION 2.14.1}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item The \code{Save as} menu item on the script
      editor adds extension \file{.R} to a file name without an extension.

      \item In package \pkg{parallel}, \code{detectCores(logical =
	FALSE)} makes an OS-dependent attempt to find the number of
      physical cores.  It usually succeeds, even on XP.
    }
  }
  
  \subsection{PACKAGE INSTALLATION}{
    \itemize{
      \item The directory pointed to by \env{USER_LOCAL} can now have
      architecture-specific sub-directories \file{lib/i386} and
      \file{lib/x64}.
    }
  }
  
  \subsection{BUG FIXES}{
    \itemize{
      \item The fix for \PR{14543} caused stack problems with outputing
      large \R objects (e.g. data frames of 25,000 items).  (\PR{14698})
